# paperclone

./: .agent-minenv.out  .continue-here.md  .dockerignore  .env.example  .env.production.example  .gitattributes  .gitignore  .npmrc  .patch  AGENT-RESULTS-SUMMARY.md  AGENTS.md  AGENTS.zh-CN.md  CLAUDE.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  CONTRIBUTING.zh-TW.md  DASHSCOPE_FIX_SUMMARY.md  Dockerfile  Dockerfile.managed  Dockerfile.onboard-smoke  Dockerfile.railway  EXPERIMENT-RELEASE-CHANGELOG.md  FINAL-AGENT-SUMMARY.md  FORK.md  FOUNDING-ENGINEER-STATUS.md  INFRASTRUCTURE-STATUS-2026-03-26.md  IURII-SERVER.md  LICENSE  LOCAL.md  MULTI-AGENT-RESULTS.md  Makefile  PAPERCLIP-INDEX.md  PAPERCLIP-SKILLS-QUICKREF.md  PATCHES.md  PHASE-2.1-IMPLEMENTATION-DETAILS.md  PHASE-2.1-PARSERS-SUMMARY.md  PHASE-2.2-IMPLEMENTATION-COMPLETE.md  PHASE_STATE.md  PR.md  (+56 more)
Intellitrade-CRCA/CR-CA/: .gitignore  CRCA.py  MANIFEST.in  MODEL_CARD.md  README.md  RELEASE_NOTES.md  STABILITY.md  __init__.py  install_cuda_wsl2.sh  install_deepspeed.sh  install_deepspeed_simple.sh  mkdocs.yml  pyproject.toml  requirements-docs.txt  requirements.txt
Intellitrade-CRCA/CR-CA/.github/: PULL_REQUEST_TEMPLATE.md
Intellitrade-CRCA/CR-CA/benchmark_results/: crca_core_benchmarks.json
Intellitrade-CRCA/CR-CA/branches/: CRCA-Q.py  paperclip_crca_entry.py
Intellitrade-CRCA/CR-CA/crca_core/: __init__.py  integrity.py  kernel.py  registry.py
Intellitrade-CRCA/CR-CA/crca_llm/: __init__.py  client.py  coauthor.py  equation_extractor.py  orchestrator.py  types.py
Intellitrade-CRCA/CR-CA/crca_parser_model/: tokenizer.json
Intellitrade-CRCA/CR-CA/crca_reasoning/: __init__.py  critique.py  godclass.py  memory.py  numeric_output_filter.py  rationale.py  react_controller.py  tool_router.py  types.py
Intellitrade-CRCA/CR-CA/crca_sd/: __init__.py  crca_sd_core.py  crca_sd_governance.py  crca_sd_mpc.py  crca_sd_realtime.py  crca_sd_tui.py
Intellitrade-CRCA/CR-CA/docs/: CRCA-Q.md  IMAGE_ANNOTATION_USAGE.md  INSTALL_DEEPSPEED.md  index.md  mkdocs.yml
Intellitrade-CRCA/CR-CA/examples/: config.yaml.example  crca_sd_example.py  data_broker_example.py  general_agent_example.py  general_agent_quickstart.py  general_agent_simple.py  hybrid_agent_auto_extraction.py  hybrid_agent_dictionary_demo.py  hybrid_agent_enhanced.py  hybrid_agent_general_knowledge.py  image_annotation_quickstart.py  logistics_corporation.py  palantir_example.py  policy_bench.py  pridnestrovia-sd.py  pridnestrovia_realtime.py  test_hybrid_fixes.py
Intellitrade-CRCA/CR-CA/image_annotation/: __init__.py  annotation_engine.py
Intellitrade-CRCA/CR-CA/ollama/: Modelfile
Intellitrade-CRCA/CR-CA/prompts/: __init__.py  default_crca.py  general_agent.py  image_annotation.py
Intellitrade-CRCA/CR-CA/schemas/: __init__.py  annotation.py  conversation.py  hybrid.py  mcpSchemas.py  policy.py  reasoning.py
Intellitrade-CRCA/CR-CA/scripts/: build_lrm_dataset.py  export_crca_core_schemas.py  export_hf_lrm.py  export_ollama_gguf.py  generate_changelog.py  generate_crca_core_docs_from_schemas.py  run_crca_core_benchmarks.py  run_full_finetune.py  run_lrm_eval.py
Intellitrade-CRCA/CR-CA/templates/: __init__.py  base_specialized_agent.py  drift_detection.py  feature_mixins.py  graph_management.py  llm_integration.py  module_registry.py  mpc_planner.py  policy_loop.py  prediction_framework.py  statistical_methods.py
Intellitrade-CRCA/CR-CA/tests/: conftest.py  sanity.yml  sanity_check  test_core.py  test_crca_core_consistency.py  test_crca_core_counterfactual_policy.py  test_crca_core_discovery_tabular.py  test_crca_core_estimate_dowhy.py  test_crca_core_identify.py  test_crca_core_integrity_entrypoints.py  test_crca_core_intervention_design.py  test_crca_core_linear_gaussian_scm.py  test_crca_core_registry.py  test_crca_core_spec.py  test_crca_core_timeseries_pcmci.py  test_crca_llm_coauthor.py  test_crca_llm_orchestrator.py  test_crca_sd.py  test_equation_extractor_llm.py  test_hybrid_agent_llm_enhanced.py  test_image_annotation_demo.py  test_image_annotation_operational.py  test_image_annotation_unit.py  test_structural_equation_parser.py  test_training_moe.py
Intellitrade-CRCA/CR-CA/tools/: __init__.py  actuators.py  code_generator.py  file_operations.py  mandate_generator.py  mcpClientUtils.py  sensors.py
Intellitrade-CRCA/CR-CA/training/: __init__.py  datasets.py  deepspeed_zero2_0_5b.json  deepspeed_zero2_1_5b.json  deepspeed_zero3_0_5b.json  deepspeed_zero3_14b.json  deepspeed_zero3_h100_3gpu.json  deepspeed_zero3_offload.json  eval.py  finetune.py  public_datasets.py
Intellitrade-CRCA/CR-CA/utils/: Agent_types.py  HHCS.py  __init__.py  agent.py  agent_discovery.py  batch_processor.py  canonical.py  conversation.py  doctrine_versioning  edit_distance.py  formatter.py  graph_reasoner.py  ledger.py  out_types.py  rate_limiter.py  rollback.py  router.py  tool_discovery.py  tui.py
Intellitrade-CRCA/CR-CA/webui/: __init__.py  app.py  config.py
Intellitrade-CRCA/crca_q/: README.md  pyproject.toml
Intellitrade-CRCA/crca_q/crca_q/: __init__.py  agent.py  cli.py  config.py  legacy_loader.py  paperclip_bridge.py  schemas.py
Intellitrade-CRCA/crca_q/tests/: test_schemas.py
blackbox/: .env.example  pyproject.toml
blackbox/rfps/: README.md
blackbox/rfps/001-dc-water-it-app-dev-services/: meta.yaml
blackbox/rfps/002-metro-nashville-ccr-platform/: meta.yaml
blackbox/rfps/003-md-education-universal-monitoring-tool/: meta.yaml
blackbox/rfps/004-rochester-ny-records-mgmt-review/: meta.yaml
blackbox/rfps/005-hawaii-ibm-software-asset-mgmt/: meta.yaml
blackbox/rfps/006-sc-alastar-software-renewal/: meta.yaml
blackbox/rfps/007-dc-octo-digicert-license-renewal/: meta.yaml
blackbox/rfps/008-md-dot-voip-system-maintenance/: meta.yaml
blackbox/tests/: conftest.py  test_cache.py  test_cli.py  test_fetcher.py  test_models.py  test_output.py  test_paperclip.py  test_parsers.py  test_pipeline.py  test_scoring.py  test_search.py  test_synthesizer.py
desktop/src-tauri/: Cargo.toml  tauri.conf.json
(+5764 files in other folders)
