[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crca"
version = "1.5.0"
description = "CR-CA Wrapper for CR-CA LRM on HF (Depricated)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
  { name="Ilum", email="a.leilionas@vk.com" }
]
keywords = [
  "causal-reasoning",
  "counterfactual-analysis",
  "structural-causal-models",
  "llm",
  "machine-learning",
  "data-science",
  "optimization",
  "governance",
  "trading",
  "socioeconomic-dynamics"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
# Minimal deps for CR-CA chat (GeneralAgent + BaseSpecializedAgent). Install full stack with: pip install crca[full]
dependencies = [
  "loguru>=0.7",
  "pydantic>=2.0",
  "openai>=1.0.0",
  "requests>=2.28",
  "python-dotenv>=1.0",
  "python-dateutil>=2.8",
  "pyyaml>=6.0",
  "toml>=0.10.2",
  "mcp>=0.9.0",
  "swarms",
  "psutil>=5.9.0",
  "ddgs>=9.0",
]

[project.optional-dependencies]
# Chat + causal tools (identify, estimate, counterfactual, design_intervention). No torch, no discovery backends.
mid = [
  "numpy>=1.23",
  "pandas>=1.5",
  "scipy>=1.10",
  "networkx>=3.0",
  "dowhy>=0.8",
]
# Full stack: mid + discovery (causal-learn, tigramite), torch, transformers, market data, etc.
full = [
  "numpy>=1.23",
  "pandas>=1.5",
  "scipy>=1.10",
  "rustworkx>=0.12.0",
  "networkx>=3.0",
  "dowhy>=0.8",
  "causal-learn>=0.1.3.9",
  "tigramite>=5.2.0",
  "optuna>=3.0",
  "torch>=2.0.0",
  "scikit-learn>=1.3",
  "xgboost>=2.0",
  "lightgbm>=4.0",
  "numba>=0.58",
  "yfinance>=0.2.0",
  "pycoingecko>=3.0",
  "pytrends>=4.8.0",
  "praw>=7.0",
  "shodan>=1.30.0",
  "geoip2>=4.7.0",
  "ccxt>=4.0",
  "websockets>=11.0",
  "web3>=6.0",
  "matplotlib>=3.5",
  "seaborn>=0.11",
  "pillow>=10.0",
  "reportlab>=4.0.0",
  "tqdm>=4.65.0",
  "rich>=13.0",
  "redis>=5.0",
  "litellm>=0.1",
  "transformers>=4.39.0",
  "datasets>=2.16.0",
  "accelerate>=0.26.0",
  "peft>=0.9.0",
]
optimization = [
  "cvxpy>=1.4",  # Requires C++ build tools on Windows (Microsoft Visual C++ 14.0+)
]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "black>=23.0",
  "mypy>=1.0",
  "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/IlumCI/CR-CA"
Repository = "https://github.com/IlumCI/CR-CA"
Documentation = "https://github.com/IlumCI/CR-CA/blob/main/README.md"
Issues = "https://github.com/IlumCI/CR-CA/issues"

[tool.hatchling.build.targets.wheel]
# Force hatchling to include everything by using packages configuration
# Since we have root-level package structure, we explicitly list all packages
packages = [
  "utils",
  "tools",
  "templates", 
  "schemas",
  "crca_core",
  "crca_llm",
  "crca_sd",
  "branches",
  "branches.crca_sd",
  "branches.crca_cg",
  "prompts",
]
# Also explicitly include root files - this ensures they're in the wheel
# Root files go at wheel root, not in a subdirectory
shared-data = { "." = ["__init__.py", "CRCA.py"] }
# Explicitly exclude sensitive files from the package
exclude = [
  "**/.env",
  "**/.env.*",
  "**/.env.local",
  "**/*.key",
  "**/*.pem",
  "**/secrets.json",
  "**/credentials.json",
  "**/config.local.*",
  "**/*_snapshot_*.json",
  "**/error.txt",
  "**/*.log",
  "**/node_modules/**",
  "**/venv/**",
  "**/venv_wsl/**",
  "**/.git/**",
  "**/.github/**",
  "**/__pycache__/**",
  "**/*.pyc",
  "**/.pytest_cache/**",
  "**/dist/**",
  "**/build/**",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
filterwarnings = [
  "ignore:.*asyncio.iscoroutinefunction.*:DeprecationWarning:litellm.*",
  "ignore:.*setParseAction.*:DeprecationWarning:pydot.*",
  "ignore:Series.__getitem__.*:FutureWarning:dowhy.*",
  "ignore:divide by zero encountered in scalar divide:RuntimeWarning:statsmodels.*",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

