[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crca-q"
version = "0.1.0"
description = "CRCA-Q quant runner for Paperclip heartbeat integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
crca-q = "crca_q.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["crca_q"]
